Possible Fix for Phablet Devices not showing Mobile Menus properly. Referencing #49

--- a/style.css
+++ b/style.css
@@ -4145,6 +4145,11 @@ ul[data-accordion-menu] > li:not(.menu-text) > ul {
   font-weight: 600;
   text-transform: uppercase;
   position: relative; }
+  @media screen and (min-width: 40em) and (max-width: 63.9375em) and (-webkit-device-pixel-ratio: 3), screen and (min-width: 40em) and (max-width: 63.9375em) and (orientation: portrait) {
+    .top-bar .show-for-small-only {
+      display: inline-block !important; }
+    .top-bar .hide-for-small-only {
+      display: none; } }
   .top-bar .nav-menu {
     position: absolute;
     right: 2%;
@@ -4389,7 +4394,7 @@ ul[data-accordion-menu] > li:not(.menu-text) > ul {
   .home #home-hero .hero-copy h6, .home .home-footer-hero .hero-copy h6 {
     font-size: 2.75em; }
 
-@media screen and (min-width: 0em) and (max-width: 39.9375em) {
+@media screen and (min-width: 0em) and (max-width: 39.9375em), (-webkit-device-pixel-ratio: 3), screen and (min-width: 40em) and (max-width: 63.9375em) and (orientation: portrait) {
   .home .home-footer-hero .hero-copy, .home .home-footer-hero.hero-image {
     height: auto !important; }
   .home .home-footer-hero .hero-copy.text {
